--- a/src/footer.css
+++ b/src/footer.css
@@ -3,16 +3,16 @@
     display: flex;
     justify-content:center;
     width: 100%;
-    height: 10vw;
+    height: 15vw;
     background-color: mediumaquamarine;
 }
 #footer>a{
-    width: 6vw;
-    height: 6vw;
+    width: 8vw;
+    height: 8vw;
     position: absolute;
     object-fit: fill;
     rotate: 180deg;
-    top: -3vw;
+    top: -4vw;
     background-color: mediumaquamarine;
     animation-duration: 1.5s;
     animation-iteration-count: infinite;
@@ -27,10 +27,25 @@
 }
 #footer>p{
     margin: 0px;
-    font-size: 1.5vw;
+    font-size: 2vw;
     font-weight: 450;
     position: absolute;
     top: 40%;
+}
+
+@media only screen and (max-width: 576px){
+    #footer{
+        height: 20vw;
+    }
+    #footer>p{
+        font-size: 3vw;
+    }
+    #footer>a{
+        width: 10vw;
+        height: 10vw;
+        top: -5vw;
+    }
+
 }
 
 @keyframes bounce {
