--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -1,12 +1,14 @@
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 2vw;
+}
 #scroll-button{
-    position: absolute;
-    bottom: -1vw;
-    left: 50%;
-    background-color: black;
-    width: 8vw;
-    height: 9vw;
-    object-fit: fill;
-    transform: translate(-50%, 0);
+    margin: 2vw;
+    opacity: 0.8;
+    animation: bounce 2s infinite;
 }
 #scroll-button:hover{
     scale: 0.9;
@@ -21,18 +23,8 @@
     height: 8vw;
 }
 #scroll-button>a>img{
-    position: absolute;
-    top: 1vw;
-    width: 80%;
-    height: 80%;
-}
-.content{
-    font-size: 2vw;
-}
-
-.scrolled{
-    top: -100vh;
-    position: fixed;
+    width: 10vw;
+    height: auto;
 }
 
 /* Credits: Adam Dipinto -> https://github.com/atom888 */
@@ -56,7 +48,7 @@
     align-items: center;
     position: relative;
     margin: 0 10px;
-    width: 40vw;
+    width: 50vw;
     aspect-ratio: 1/1;
 }
 #welcome-eyecatcher span:nth-child(1) {
@@ -99,6 +91,10 @@
     text-align: center;
     transition: 0.5s;
     z-index: 1000;
+    
+}
+.content>p{
+    font-size: 2.2vw;
 }
 .content>p:after{
     content:"Frontend Developer";
@@ -114,6 +110,20 @@
     animation: 
       typewriter 3s steps(20, end),
       blink-cursor .75s step-end infinite;
+}
+
+/* Mobile */
+@media only screen and (max-width: 600px){
+    #welcome-eyecatcher{
+        width: 75vw;
+    }
+    .content>h1{
+       font-size: 7vw;
+    }
+    .content>p{
+        font-size: 4vw;
+    }
+    
 }
 
 @keyframes animate {
@@ -156,6 +166,14 @@
 
     100% {font-size:100%;opacity:1;}
 }
+
+@keyframes bounce{
+    0% {transform: translateY(-0.4vw);}
+    50% {transform: translateY(0.4vw);}
+    100% {transform: translateY(-0.4vw);}
+}
+
+
 
 
 
