--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -6,7 +6,7 @@ html{
     display: inline-block;
     font-size: 4vw;
     font-weight: 700;
-    margin: 15vw;
+    margin: 12vw;
 }
 .section-header:before{
     position: absolute;
@@ -28,13 +28,12 @@ html{
 #personal-headshot>img{
     border-radius: 50%;
 }
-#personal-container{
+#personal-body{
     display: flex;
     flex-direction: row;
 }
 #personal-headshot{
     width: 25%;
-    display:flex;
     
 }
 #personal-headshot>img{
@@ -44,7 +43,7 @@ html{
 #personal-text{
     width: 75%;
     text-align: left;
-    font-size: 1.5vw;
+    font-size: 2vw;
     padding-left: 3vw;
     padding-right: 3vw;
 }
@@ -59,7 +58,7 @@ html{
 #skills-heading{
     display: flex;
     justify-content: center;
-    margin: 5vw;
+    margin: 8vw 6vw;
     border-top: 6px solid black;
     border-bottom: 6px solid black;
 }
@@ -73,7 +72,7 @@ html{
     width: 5vw;
     aspect-ratio: 1/1;
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: 1vw;
    
 }
 #skills-subheading>h2{
@@ -105,7 +104,7 @@ html{
 }
 #download-button:hover{
     scale: 0.9;
-
+    transition: 0.4s;
 }
 #download-button>p{
     width: 75%;
@@ -127,7 +126,7 @@ html{
 
 .skill-container{
     position: relative;
-    width: 10vw;
+    width: 12vw;
     font-size: 1.5vw;
     aspect-ratio: 1/1;
     border: 0.2vw solid darkgreen;
@@ -203,25 +202,61 @@ html{
     margin-right: 15vw;
 }
 
-@media only screen and (max-width: 768px){
-    #download-button>p{
-        width: 75%;
-        font-size: 1.5vw;
-        padding-left: 1vw
-    }   
-}
 @media only screen and (max-width: 576px){
+    .section-header{
+        font-size: 6vw;
+    }
     #skills-subheading{
         width: 65%;
         justify-content: center;
-    }   
+        margin: 2vw 0vw;
+    } 
+    #skills-subheading>h2{
+        font-size: 4vw;
+    }  
     #skills-subheading-2{
-        width: 35%;
+        padding: 0px;
     }
     #skills-subheading-2>a{
-        width: 90%;
+        width: 100%;
+        height: 7vw;
+
     }
+    .skill-container{
+        width: 20vw;
+    }
+    .flex-grid{
+        margin-top: 2vw;
+    }
+    .flex-grid:nth-child(even){
+        margin-left: 10vw;
+        margin-right: 10vw;
+    }
+    .flex-grid:nth-child(odd){
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+    .caption{
+        font-size: 3vw;
+    }
+
+    #personal-text{
+        font-size: 3vw;
+    }
+    #personal-body{
+        flex-direction: column;
+        align-items: center;
+    }
+    #download-button>p{
+        font-size: 2.8vw;
+        padding: 0vw 2vw;
+    }
+    #contact-body>a>img{
+        width: 15vw;
+    }
+
 }
+
 
 @keyframes bounce-2 {
     0%   { transform: translateY(0); }
