--- a/src/project.css
+++ b/src/project.css
@@ -13,7 +13,6 @@
 }
 .project-body{
     width: 100%;
-    height: 20vw;
     border-top: 0.1vw solid black;
     box-shadow: 0px -0.2vw 3px gray;
     text-align: center;
@@ -30,6 +29,7 @@
 .buttons-container{
     display: flex;
     width: 100%;
+    margin-bottom: 2vw;
 }
 .buttons-container>a{
     display: flex;
@@ -66,10 +66,6 @@
     .project-card{
         position: relative;
         width: 250px;
-        height: 300px;
-    }
-    .project-image>img{
-        height: 150px;
     }
     .project-body>h2{
         font-size: 0.8em;
@@ -85,5 +81,12 @@
     }
     .buttons-container>a>img{
         width: 15px;
+    }
+}
+
+/* Mobile */
+@media only screen and (max-width: 576px){
+    .project-card{
+        width: 70vw; 
     }
 }
